Fix overflow

--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@ body {
   font-style: normal;
   font-weight: 600;
   background-color: #12141d;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Napis główny */
